themes/base.css
/**
 * Types (filters)
 */
html /deep/ .type-filter-fill {
    fill: transparent !important;
}
html /deep/ .type-filter-stroke {
    stroke: transparent !important;
}
html /deep/ .type-filter-color {
    color: transparent !important;
}

/**
 * General
 */

html /deep/ .box {
    box-sizing: border-box;
    padding: 20px;
    text-align: center;
}

/* Paper */
html /deep/ paper-button {
    margin: 0;
}

/* Search */

html /deep/ .search-result, html /deep/ .search-not-found {
    color: #aaa;
    padding: 10px;
}
html /deep/ .search-result {
    cursor: pointer;
}
html /deep/ .search-result:hover {
    color: #eee;
}
html /deep/ .search-result.core-selected {
    color: #eee;
    padding: 10px;
}
html /deep/ .search-result:not(:last-child) {
    border-bottom: 1px solid #444;
}
html /deep/ .search-result core-icon {
    margin-right: 10px;
}

/* Dude Dropdown */

html /deep/ dude-dropdown /deep/ #header {
    text-transform: uppercase;
    border-bottom: 1px solid #444;
    cursor: pointer;
    padding: 10px;
}
html /deep/ dude-dropdown .row {
    opacity: 0.6;
    cursor: pointer;
    padding: 10px 0;
}
html /deep/ dude-dropdown .row:hover {
    opacity: 1;
}
html /deep/ dude-dropdown .row.core-selected {
    display: none;
}

/**
 * Toolbar
 */

html /deep/ dude-toolbar [data-state="root"] {
    margin: auto;
    padding: 0 20px;
    max-width: 900px;
}

/**
 * Sidebar
 */

html /deep/ dude-sidebar {
    padding: 10px;
    transition: .2s;
    width: 250px;
}
html /deep/ dude-sidebar.left:not(.selected),
html /deep/ dude-sidebar.right:not(.selected) {
    width: 0;
    padding: 0;
    border-left: none;
    border-right: none;
}
html /deep/ dude-sidebar {
    overflow: auto;
}
html /deep/ dude-sidebar /deep/ .box {
    margin: 15px 0;
}
html /deep/ dude-sidebar core-menu {
    margin: 10px 0;
}
html /deep/ dude-sidebar /deep/ .box input[is="core-input"] {
    width: 100%;
}
html /deep/ dude-sidebar /deep/ .row > *:not(:last-child) {
    margin-right: 5px;
}
html /deep/ dude-sidebar /deep/ .row > *:not(:first-child) {
    margin-left: 5px;
}

